// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldError /> should do nothing if invalid is false 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FieldError
    error={null}
    id="unitError"
    invalid={false}
    stringFormatter={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<FieldError /> should render an error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FieldError
    error={
      Object {
        "message_id": "foo",
        "params": Object {
          "foo": "bar",
        },
      }
    }
    id="unitError"
    invalid={true}
    stringFormatter={
      [MockFunction] {
        "calls": Array [
          Array [
            "foo",
            Object {
              "foo": "bar",
            },
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": "string",
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "unitError_foo",
    "nodeType": "host",
    "props": Object {
      "children": "string",
    },
    "ref": null,
    "rendered": "string",
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "unitError_foo",
      "nodeType": "host",
      "props": Object {
        "children": "string",
      },
      "ref": null,
      "rendered": "string",
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
